Changed the post name to reflect all projects in the course

--- a/_posts/2017-06-01-cs193p.md
+++ b/_posts/2017-06-01-cs193p.md
@@ -1,7 +1,8 @@
 ---
 date: 2017-06-01
 layout: post
-synopsis: An iOS calculator app written in Swift.
+title: CS193P: Developing iOS 10 Apps in Swift
+synopsis: Projects and assignments from Paul Hegarty's Stanford CS193P course.
 ---
 
 # Calculator App
