Tweaked the layout of the posts

--- a/_posts/2017-06-01-cs193p.md
+++ b/_posts/2017-06-01-cs193p.md
@@ -5,6 +5,6 @@ title: "CS193P: Developing iOS 10 Apps in Swift"
 synopsis: Projects and assignments from Paul Hegarty's Stanford CS193P course.
 ---
 
-# Calculator App
+## Calculator App
 
 [shinyobjectaffliction.com/cs193p-calculator](http://shinyobjectaffliction.com/cs193p-calculator){:target="_blank"}
