--- a/_posts/2017-06-01-cs193p.md
+++ b/_posts/2017-06-01-cs193p.md
@@ -5,6 +5,19 @@ title: "CS193P: Developing iOS 10 Apps in Swift"
 synopsis: Projects and assignments from Paul Hegarty's Stanford CS193P course.
 ---
 
+# Synopsis
+
+Paul Hegarty's Standford course CS193P _"Developing iOS 10 Apps in Swift"_ on iTunes U is regarded as one of the go to resources for learning the Swift programming language and iOS app development. This post details my work following along with the course as well as my observations and comments.
+
+# Overview
+
+A little over two years ago I was looking a different resources for learning Swift and iOS development. I stumbled across Paul Hegarty's video course on iTunes U and thought I'd give it a try. I planned on taking the course seriously by watching all the videos, doing the assigned reading, and completing the homework assignments. I was __really__ impressed with the course and Paul's command of the subject. I had fun taking the course and learned a lot about Swift and iOS app development.
+
+Unfortunately, I wasn't able to parlay this new knowledge into a Swift/iOS programming opportunity.
+
+Two years have passed and the tech has changed since I originally audited CS193P. Swift 3 and iOS 10 are the current releases, respectively. There've been significant changes in Swift as the language continues to mature. So I'm diving back into Paul's class to refresh my Swift and iOS technical skills.
+
+
 ## Calculator App
 
-[shinyobjectaffliction.com/cs193p-calculator](http://shinyobjectaffliction.com/cs193p-calculator){:target="_blank"}
+[Calculator App](http://shinyobjectaffliction.com/cs193p-calculator){:target="_blank"}
