Fixed course identifier.

--- a/_posts/2017-06-01-cs193p.md
+++ b/_posts/2017-06-01-cs193p.md
@@ -1,13 +1,13 @@
 ---
 date: 2017-06-01
 layout: post
-title: "CS193P: Developing iOS 10 Apps in Swift"
-synopsis: Projects and assignments from Paul Hegarty's Stanford CS193P course.
+title: "CS193p: Developing iOS 10 Apps in Swift"
+synopsis: Projects and assignments from Paul Hegarty's Stanford CS193p course.
 ---
 
 # Synopsis
 
-Paul Hegarty's Standford course CS193P _"Developing iOS 10 Apps in Swift"_ on iTunes U is regarded as one of the go to resources for learning the Swift programming language and iOS app development. This post details my work following along with the course as well as my observations and comments.
+Paul Hegarty's Standford course CS193p _"Developing iOS 10 Apps in Swift"_ on iTunes U is regarded as one of the go to resources for learning the Swift programming language and iOS app development. This post details my work following along with the course as well as my observations and comments.
 
 # Overview
 
@@ -15,7 +15,7 @@ A little over two years ago I was looking a different resources for learning Swi
 
 Unfortunately, I wasn't able to parlay this new knowledge into a Swift/iOS programming opportunity.
 
-Two years have passed and the tech has changed since I originally audited CS193P. Swift 3 and iOS 10 are the current releases, respectively. There've been significant changes in Swift as the language continues to mature. So I'm diving back into Paul's class to refresh my Swift and iOS technical skills.
+Two years have passed and the tech has changed since I originally audited CS193p. Swift 3 and iOS 10 are the current releases, respectively. There've been significant changes in Swift as the language continues to mature. So I'm diving back into Paul's class to refresh my Swift and iOS technical skills.
 
 
 ## Calculator App
