Update the post with more information about the course and calculator app

--- a/_posts/2017-06-01-cs193p.md
+++ b/_posts/2017-06-01-cs193p.md
@@ -11,13 +11,19 @@ Paul Hegarty's Standford course CS193p _"Developing iOS 10 Apps in Swift"_ on iT
 
 # Overview
 
-A little over two years ago I was looking a different resources for learning Swift and iOS development. I stumbled across Paul Hegarty's video course on iTunes U and thought I'd give it a try. I planned on taking the course seriously by watching all the videos, doing the assigned reading, and completing the homework assignments. I was __really__ impressed with the course and Paul's command of the subject. I had fun taking the course and learned a lot about Swift and iOS app development.
+A little over two years ago I was looking at different resources for learning Swift and iOS development. In reviewing various tutorials, guides, and books, I stumbled across Paul Hegarty's video course on iTunes U and thought I'd give it a try. I planned on taking the course seriously by watching all the videos, doing the assigned reading, and completing the homework assignments. I was __really__ impressed with the course and Paul's command of the subject. I found the course videos to be both informative and entertaining. I had fun taking the course and learned a lot about Swift and iOS app development.
 
-Unfortunately, I wasn't able to parlay this new knowledge into a Swift/iOS programming opportunity.
+Unfortunately, I wasn't able to parlay this new knowledge into a Swift/iOS programming opportunity. I did write several iOS apps for Medtronic but these were written using Xamarin in C# and Mono Touch.
 
-Two years have passed and the tech has changed since I originally audited CS193p. Swift 3 and iOS 10 are the current releases, respectively. There've been significant changes in Swift as the language continues to mature. So I'm diving back into Paul's class to refresh my Swift and iOS technical skills.
+Also, during the two years that have passed the tech has changed since my first audit of CS193p. Swift has gone from version 2 to 3 and iOS has evolved to version 10. There've been significant changes to Swift as the language continues to mature, Apple has deprecated Swift 2 code and push developers to verion 3. So I'm diving back into Paul's class to refresh my Swift and iOS technical skills.
+
+# CS193p Optional Friday Sessions
+
+I made this observation the first time I audited CS193p and it still holds true. The course videos on iTunes U capture the Monday and Wednesday classes but doesn't include the optional Friday sessions. I think this is extremely unfortunate because these Friday sessions sound interesting. I feel a bit greedy since the content from the Monday and Wednesday classes are posted free of charge but I'm bummed that I can't also hear Paul Hegarty's take on the topics he presents in the Friday sessions.
 
 
 ## Calculator App
 
-[Calculator App](http://shinyobjectaffliction.com/cs193p-calculator){:target="_blank"}
+The calculator app is the first Swift/iOS app presented in CS193p. This is a cool little app that demonstrates a number of the basic tenets of developing iOS apps with Swift. Paul Hegarty takes the lead by creating the app in the class but also leaves enough interesting enhancements for the students to implement.
+
+My implementation of the calculator app is available on GitHub in my [Calculator App](http://shinyobjectaffliction.com/cs193p-calculator){:target="_blank"} repository.
