Updated blog files with current status

--- a/_posts/2017-06-01-cs193p.md
+++ b/_posts/2017-06-01-cs193p.md
@@ -26,4 +26,6 @@ I made this observation the first time I audited CS193p and it still holds true.
 
 The calculator app is the first Swift/iOS app presented in CS193p. This is a cool little app that demonstrates a number of the basic tenets of developing iOS apps with Swift. Paul Hegarty takes the lead by creating the app in the class but also leaves enough interesting enhancements for the students to implement.
 
+### Project Web-site
+
 My implementation of the calculator app is available on GitHub in my [Calculator App](http://shinyobjectaffliction.com/cs193p-calculator){:target="_blank"} repository.
